--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto&display=swap');
+
 * {
     border: 1px solid red;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -10,14 +12,17 @@ body {
 nav {
     display: flex;
     flex-direction: row;
-    background-color: rgba(0,0,0,0.9);
-    color: white;
+    color: black;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     position: fixed;
     top: 0;
     z-index: 2;
+    /* background-color: rgba(255, 255, 255, .75); */
+    background-color: rgba(0,0,0,0.8);
+    backdrop-filter: blur(5px);
+    /* text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000; */
 }
 
 .navbar-title {
@@ -76,6 +81,7 @@ nav {
     z-index: 1;
     font-size: 3rem;
     color: white;
+    font-family: 'Pacifico', cursive;
 }
 
 .shows-section {
@@ -142,6 +148,86 @@ nav {
     cursor: pointer;
 }
 
+.show-link button:hover {
+    filter: brightness(110%);
+}
+
+#actors {
+    background-color: black;
+    color: white;
+}
+
+.actors-header {
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.actor-img {
+    width: 100%;
+}
+
+.actors-wrapper-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.actors-wrapper {
+    margin: 0 20px 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 30px;
+}
+
+.actor-box {
+    max-width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.actor-name {
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.actor-summary {
+    font-size: 0.8rem;
+}
+
+.shop-header {
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.shop-wrapper-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.shop-wrapper {
+    margin: 0 20px 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 50px;
+}
+
+.shop-img {
+    width: 100%;
+}
+
+.shop-box {
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
 footer {
     background-color: black;
     display: flex;
@@ -190,6 +276,10 @@ footer {
     margin: 0;
 }
 
+a:hover, a p:hover {
+    color: #B87C7E;
+}
+
 /* Medium screen size or larger */
 @media only screen and (min-width: 800px) {
     .section-title {
@@ -211,5 +301,11 @@ footer {
 @media only screen and (min-width: 1200px) {
     .section-title {
         font-size: 5rem;
+    }
+    .actors-wrapper {
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    }
+    .shop-wrapper {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
