--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto&display=swap');
 
 * {
-    border: 1px solid red;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -54,7 +53,7 @@ nav {
 
 .nav-link {
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 0.8rem;
     color: white;
 }
 
@@ -97,11 +96,12 @@ nav {
 }
 
 .shows-header {
-    border: 1px solid gray;
+    border: 1px solid #CCC;
     text-align: center;
     padding: 5px;
     background-color: #F7F7F7;
     margin: 50px 0 0;
+    font-size: 1.4rem;
 }
 
 .show-specifics {
@@ -164,6 +164,8 @@ nav {
 
 .actor-img {
     width: 100%;
+    height: 300px;
+    object-fit: cover;
 }
 
 .actors-wrapper-container {
@@ -191,6 +193,7 @@ nav {
 .actor-name {
     font-size: 1rem;
     font-weight: 600;
+    margin: 5px 0;
 }
 
 .actor-summary {
@@ -217,7 +220,18 @@ nav {
 }
 
 .shop-img {
+    width: 250px;
+    height: 250px;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+
+.shop-item-name {
+    background-color: black;
+    color: white;
     width: 100%;
+    padding: 7px 0;
 }
 
 .shop-box {
@@ -226,6 +240,8 @@ nav {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    cursor: pointer;
+    border: 1px solid black;
 }
 
 footer {
@@ -282,6 +298,9 @@ a:hover, a p:hover {
 
 /* Medium screen size or larger */
 @media only screen and (min-width: 800px) {
+    .nav-link {
+        font-size: 1rem;
+    }
     .section-title {
         font-size: 4rem;
     }
@@ -294,6 +313,9 @@ a:hover, a p:hover {
     }
     .map-container, .footer-info, .footer-shows, .footer-social {
         width: 20%;
+    }
+    .shop-wrapper {
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
